<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtHintPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/txtHintUsername" />

    <EditText
        android:id="@+id/txtServerURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/txtHintServerURL"
        android:inputType="textUri"
        android:lines="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="19dp"
        android:text="@string/signUpButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/loginButton" />
    
</RelativeLayout>
