<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditUserActivity" >

    <TextView
        android:id="@+id/lblStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/lblStudentID"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblStudentID"
        android:layout_marginTop="15dp"
        android:text="@string/lblLastname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblLastname"
        android:layout_marginTop="15dp"
        android:text="@string/lblFirstname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblFirstname"
        android:layout_marginTop="15dp"
        android:text="@string/lblMI"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblMI"
        android:layout_marginTop="15dp"
        android:text="@string/lblUsername"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblUsername"
        android:layout_marginTop="15dp"
        android:text="@string/lblPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblPassword"
        android:layout_marginTop="15dp"
        android:text="@string/lblRePassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnBrowseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblRePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btnBrowseImage" />

    <EditText
        android:id="@+id/txtStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblStudentID"
        android:layout_alignBottom="@+id/lblStudentID"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/lblRePassword"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblLastname"
        android:layout_alignBottom="@+id/lblLastname"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/lblRePassword"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/txtFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblFirstname"
        android:layout_alignBottom="@+id/lblFirstname"
        android:layout_alignLeft="@+id/txtLastname"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/txtMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblMI"
        android:layout_alignBottom="@+id/lblMI"
        android:layout_alignLeft="@+id/txtFirstname"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblUsername"
        android:layout_alignBottom="@+id/lblUsername"
        android:layout_alignLeft="@+id/txtMI"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblPassword"
        android:layout_alignBottom="@+id/lblPassword"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:ems="10" />

    <EditText
        android:id="@+id/txtRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblRePassword"
        android:layout_alignBottom="@+id/lblRePassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        android:ems="10" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnSave" />

</RelativeLayout>
